<resources>
    <string name="app_name">Bank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_skip_btn">Skip</string>
    <string name="login_forget_password_txt">Forget Password</string>
    <string name="login_remember_me_txt">Remember me</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone</string>
    <string name="login_button">Login</string>
    <string name="create_new_account_button">Create New Account</string>
    <string name="title_activity_home_cycle">HomeCycleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register_input_name">Name</string>
    <string name="register_input_email">Email</string>
    <string name="register_input_your_birth_date">Your Birth Date</string>
    <string name="register_input_blood_type">Blood Type</string>
    <string name="register_input_last_date_for_blood_donation">Last Date For Blood Donation</string>
    <string name="register_input_phone">Phone</string>
    <string name="register_input_password">Password</string>
    <string name="forget_password_text">Forget Password!</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="forget_password_send_button">Send</string>
    <string name="password_reset_code">Password reset code</string>
    <string name="re_password">Re Password</string>
    <string name="validation_code">Validation code</string>
    <string name="change_password_button">Change Password</string>
    <string name="register_toolbar_title">Create New Account</string>
    <string name="register_sign_up_button">Sign Up</string>
    <string name="your_age_hint">Your Age</string>
    <string name="cities">Cities</string>
    <string name="save_text">Save</string>
    <string name="mobile">Mobile :</string>
    <string name="email_address">Email Address :</string>
    <string name="contact_us">Contact Us</string>
    <string name="the_way_of_disease_prevention">The Way of disease prevention</string>
    <string name="status_name">Status Name:</string>
    <string name="hospital">Hospital:</string>
    <string name="city_name">City Name:</string>
    <string name="call">Call</string>
    <string name="details">Details</string>
    <string name="number_of_bags">Number of bags</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="notes">Notes</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="send_request">Send Request</string>
    <string name="name_">Name:</string>
    <string name="hospital_address_">Hospital address:</string>
    <string name="age_">Age:</string>
    <string name="blood_type_">Blood Type:</string>
    <string name="number_bags_">Number Bags:</string>
    <string name="hospital_">Hospital:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="favorites">Favorites</string>
    <string name="home_page">Home Page</string>
    <string name="instructions">Instructions</string>
    <string name="about_application">About Application</string>
    <string name="app_evaluation">App Evaluation</string>
    <string name="log_out">Log Out</string>
    <string name="message_title">Message Title</string>
    <string name="your_message">Your Message</string>
    <string name="title_activity_order_request_information">Map</string>
    <string name="modify">Modify</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_location">Select Location</string>
</resources>
