<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.userCycle.ForgetPasswordStep2Fragment">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/AppLogoStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_xxl"
        android:text="@string/password_reset_code"
        android:textSize="@dimen/txt_size_l"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_password2_Fragment_TiL_code"
        style="@style/AppTextInputLayoutStyle"
        android:layout_marginTop="@dimen/dimens_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.design.widget.TextInputEditText
            style="@style/AppTextInputEditTextStyle"
            android:hint="@string/validation_code"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_password2_Fragment_TiL_Password"
        style="@style/AppTextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_password2_Fragment_TiL_code">

        <android.support.design.widget.TextInputEditText
            style="@style/AppTextInputEditTextStyle"
            android:hint="@string/register_input_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_password2_Fragment_TiL_Re_Password"
        style="@style/AppTextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_password2_Fragment_TiL_Password">

        <android.support.design.widget.TextInputEditText
            style="@style/AppTextInputEditTextStyle"
            android:hint="@string/re_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_password2_Fragment_TiL_phone"
        style="@style/AppTextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_password2_Fragment_TiL_Re_Password">

        <android.support.design.widget.TextInputEditText
            style="@style/AppTextInputEditTextStyle"
            android:hint="@string/re_password"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Forget_password2_Fragment_button_Change_Password"
        style="@style/AppButtonStyle"
        android:background="@color/GreenColor"
        android:layout_marginTop="@dimen/dimens_l"
        android:text="@string/change_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_password2_Fragment_TiL_phone"/>

</android.support.constraint.ConstraintLayout>