<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.fragments.userCycle.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                style="@style/AppLogoStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Login_Fragment_TiL_Phone"
                style="@style/AppTextInputLayoutStyle"
                android:layout_marginTop="@dimen/dimens_xl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:hint="@string/phone_hint"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Login_Fragment_TiL_Password"
                style="@style/AppTextInputLayoutStyle"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_TiL_Phone">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/Login_Fragment_Cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_l"
                android:layout_marginTop="@dimen/dimens_m"
                android:text="@string/login_remember_me_txt"
                android:textSize="@dimen/txt_size_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_TiL_Password" />

            <TextView
                android:id="@+id/Login_Fragment_Tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_l"
                android:layout_marginTop="@dimen/dimens_m"
                android:drawableEnd="@drawable/ic_warning"
                android:drawablePadding="@dimen/dimens_s"
                android:gravity="center"
                android:padding="@dimen/dimens_s"
                android:text="@string/login_forget_password_txt"
                android:textSize="@dimen/txt_size_m"
                app:layout_constraintBottom_toBottomOf="@+id/Login_Fragment_Cb_remember_me"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_TiL_Password" />

            <Button
                android:id="@+id/Login_Fragment_btn_Login"
                style="@style/AppButtonStyle"
                android:layout_marginTop="@dimen/dimens_m"
                android:text="@string/login_button"
                android:background="@color/GreenColor"
                android:textColor="@color/whiteColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Tv_forget_password" />

            <Button
                android:id="@+id/Login_Fragment_btn_Create_new_account"
                style="@style/AppButtonStyle"
                android:layout_marginTop="@dimen/dimens_m"
                android:text="@string/create_new_account_button"
                android:background="@color/BlueColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_btn_Login" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>