<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.fragments.userCycle.ForgetPasswordStep1Fragment">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/AppLogoStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_l"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginTop="@dimen/dimens_xxl"
        android:text="@string/forget_password_text"
        android:textSize="@dimen/txt_size_l"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_password1_Fragment_TiL_phone"
        style="@style/AppTextInputLayoutStyle"
        android:layout_marginTop="@dimen/dimens_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.design.widget.TextInputEditText
            style="@style/AppTextInputEditTextStyle"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Forget_password1_Fragment_button_Send"
        style="@style/AppButtonStyle"
        android:layout_marginTop="@dimen/dimens_l"
        android:text="@string/forget_password_send_button"
        android:background="@color/GreenColor"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_password1_Fragment_TiL_phone"/>




</android.support.constraint.ConstraintLayout>